# printerdemo-stm32h7-cpp

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md  STM32H735IGKX_FLASH.ld  StmTextCMake.launch  build.sh  build_and_flash.sh
Platform/: bsp_init.c  bsp_init.h  stm_slint_platform.cpp  stm_slint_platform.h
Sources/: main.c  main.cpp  printer.cpp  printer.h  stm_slint_platform.cpp
Startup/: startup_stm32h735igkx.s
ui/: home_page.slint  printerdemo.slint
